--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   ],
   "license": "MIT",
   "author": "Marlin Gingerich <marlin.gingerich@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gingerich/koa-module.git"
+  },
   "dependencies": {
     "bottlejs": "^1.3.0",
     "electrolyte": "^0.2.6",
