--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "dependencies": {
     "bottlejs": "^1.3.0",
     "electrolyte": "^0.2.6",
-    "joi": "^9.0.1",
+    "joi": "^9.2.0",
     "koa": "^2.0.0",
     "koa-compose": "^3.1.0",
     "koa-convert": "^1.2.0",
     "koa-except": "^0.0.2",
-    "koa-joi": "^1.0.0",
+    "koa-joi": "gingerich/koa-joi#master",
     "koa-mount": "^2.0.0",
     "koa-router": "https://github.com/gingerich/koa-router.git#v7-fix-prefix",
     "lodash.get": "^4.4.1",
